--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "expo": "~46.0.13",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "native-base": "^3.4.17",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-live-audio-stream": "^1.1.1",
+    "react-native-safe-area-context": "^4.3.4",
+    "react-native-svg": "^13.2.0",
+    "react-native-use-websocket": "^0.2.6",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
